[workspace]
[package]
version = "0.1.0"
name = "mamba-program"
edition = "2021"

[dependencies]
sp1-zkvm = { git = "https://github.com/succinctlabs/sp1.git" }
anyhow = "1.0.79"
clap = { version = "4.2.4", features = ["derive"] }
memmap2 = "0.9.3"
rand = "0.8.5"
rayon = "1.8.1"
fancy-regex = "0.13.0"
serde_json = "1.0.112"
