[workspace]
[package]
version = "0.1.0"
name = "mamba-script"
edition = "2021"

[dependencies]
sp1-core = { git = "https://github.com/succinctlabs/sp1.git" }
anyhow = "1.0.79"
fancy-regex = "0.13.0"
serde_json = "1.0.112"

[build-dependencies]
sp1-helper = { git = "https://github.com/succinctlabs/sp1.git" }